--- a/client/src/components/CreatePost/styles.css
+++ b/client/src/components/CreatePost/styles.css
@@ -1,6 +1,7 @@
 .create-post-container {
     display: flex;
     flex-direction: row;
+    max-height: 20vh;
 }
 
 .create-post-form {
@@ -14,3 +15,16 @@
     justify-content: space-between;
     padding: 10px;
 }
+
+.image-preview {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.image-preview img {
+    max-width: 100%;
+    max-height: 60vh;
+    object-fit: contain;
+}
+
