--- a/client/src/components/CreatePost/styles.css
+++ b/client/src/components/CreatePost/styles.css
@@ -7,6 +7,8 @@
 .create-post-form {
     display: flex;
     flex-direction: column;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .create-post-form-footer {
@@ -14,6 +16,8 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .image-preview {
@@ -26,5 +30,13 @@
     max-width: 100%;
     max-height: 60vh;
     object-fit: contain;
+    border-radius: 15px;
 }
 
+textarea {
+    font-size: 20px;
+}
+
+textarea:focus {
+    outline: none;
+}
