Add DisplayPost and /posts/get-friends, Continue front end styling

--- a/client/src/components/CreatePost/styles.css
+++ b/client/src/components/CreatePost/styles.css
@@ -1,9 +1,10 @@
-.create-post-container {
+.create-post-container, .create-post-form  {
     display: flex;
-    flex-direction: row;
-    max-height: 20vh;
+    flex-direction: column;
+    padding-left: 5px;
+    padding-right: 5px;
 }
-
+/*TODO: Add max-width that works in relation top HomePage*/
 .create-post-form {
     display: flex;
     flex-direction: column;
