--- a/client/src/components/CreatePost/styles.css
+++ b/client/src/components/CreatePost/styles.css
@@ -3,7 +3,9 @@
     flex-direction: column;
     padding-left: 5px;
     padding-right: 5px;
+    overflow: visible;
 }
+
 /*TODO: Add max-width that works in relation top HomePage*/
 .create-post-form {
     display: flex;
