--- a/client/src/components/DisplayPost/styles.css
+++ b/client/src/components/DisplayPost/styles.css
@@ -1,13 +1,15 @@
 .post-container{
-    display: flex;
-    flex-direction: column;
-    border-bottom: 1px solid gray;
-    padding-left: 5px;
-    padding-right: 5px;
+    position: relative;
+        display: flex;
+        flex-direction: column;
+        border-top: 1px solid #555555;
+        padding: 20px;
+        padding-left: 10px;
 }
 
 .post-text {
-    padding: 10px;
+    margin-top: 20px;
+        color: #ccc
 }
 
 .post-footer {
@@ -30,4 +32,23 @@
     max-height: 60vh;
     object-fit: contain;
     border-radius: 15px;
+}
+
+.post-created-at {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 12px;
+    color: grey;
+}
+
+.post-username {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    /* Align to the left of the post */
+    font-weight: bold;
+    /* Dark gray color for the username */
+    font-size: 18px;
+    /* Adjust size as necessary */
 }
