--- a/client/src/pages/styles.css
+++ b/client/src/pages/styles.css
@@ -188,3 +188,16 @@ button.deny-button:disabled {
     background-color: #dc3545;
     /* Darker shade for the deny button when disabled */
 }
+
+.image-preview {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.image-preview img {
+    max-width: 100%;
+    max-height: 60vh;
+    object-fit: contain;
+    border-radius: 15px;
+}
