--- a/client/src/pages/SearchPage/styles.css
+++ b/client/src/pages/SearchPage/styles.css
@@ -1,9 +1,11 @@
 .search-page {
     padding: 20px;
+    padding-top: 40px;
     max-width: 600px;
     margin: auto;
     text-align: center;
 }
+
 
 .search-bar {
     display: flex;
@@ -44,3 +46,9 @@
     color: red;
 }
 
+.pending-indicator {
+  font-style: italic;
+  font-size: 0.85rem;
+  color: #87929c;
+  margin-left: 8px;
+}
